Fix: Show correct font color in dark mode

--- a/src/app/help/documentation/documentation.page.scss
+++ b/src/app/help/documentation/documentation.page.scss
@@ -13,6 +13,9 @@
   .adjustFontSize{
      font-size: 16px;
   }
+  .adjustColorDarkmode{
+    color: var(--ion-color-dark);
+  }
 
   ol {
     list-style-type: none;
